# KeyChattering

./: CMakeLists.txt  LICENCE  README.md
include/: Application.h  CommandLineParsing.h  KeyPressData.h  KeyboardHook.h
src/: Application.cpp  CommandLineParsing.cpp  KeyPressData.cpp  KeyboardHook.cpp  main.cpp
